# mimetic

./: CMakeLists.txt
mimetic/: tokenizer.h
mimetic/rfc822/: header.cxx  header.h
test/: cutee.cxx
win32/: libmimetic.sln  libmimetic.vcxproj  libmimetic.vcxproj.filters
